[popup] Add a sufficiently high z-index to place popup screen above fixed toolbar - Fixes: #4265
The !important should not be necessary once select menus are implemented using popup widgets.

--- a/css/structure/jquery.mobile.popup.css
+++ b/css/structure/jquery.mobile.popup.css
@@ -1,17 +1,18 @@
 .ui-popup-container {
-  z-index: 1100 !important;
-  display: inline-block;
-  position: absolute;
-  padding: 0px;
+	z-index: 1100 !important;
+	display: inline-block;
+	position: absolute;
+	padding: 0px;
 }
 
 .ui-popup-screen {
-  opacity: 0;
-  border: 0px;
+	opacity: 0;
+	border: 0px;
+	z-index: 1099 !important;
 }
 
 .ui-popup-btn-close {
-   position:absolute; 
-   top:-15px; 
-   right:-15px;	
+	position:absolute; 
+	top:-15px; 
+	right:-15px;	
 }
